plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sabujak'
version = '0.0.1-SNAPSHOT'
description = '“Sabujak” is a Spring Boot–based service that leverages public data to provide diligent, incremental support for small business owners.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// MongoDB
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	// jjwt
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'

	// WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// AWS SDK
	implementation 'software.amazon.awssdk:s3:2.31.35'

	implementation 'software.amazon.awssdk:apache-client:2.31.35'
}

tasks.named('test') {
	useJUnitPlatform()
}
